# cpp_game_engine

./: .editorconfig  .gitignore  Animation.h  Application.cpp  Application.h  CMakeLists.txt  Collectible.cpp  Display.cpp  Display.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Player.cpp  Player.h  README.md
Res/Maps/: dummy.tmx  platforms.tmx
Resource_Managers/: Font_Manager.cpp  Font_Manager.h  Resource_Holder.h  Resource_Manager.h  Sound_Manager.cpp  Sound_Manager.h  Texture_Manager.h
States/: Game_State.cpp  Game_State.h  Playing_State.h
Util/: Random.cpp  Random.h
src/: Animation.cpp  Animation.h  Application.cpp  Application.h  Collectible.cpp  Collectible.h  Collider.cpp  Collider.h  Display.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Main.cpp  Player.cpp  Player.h  TestBlock.cpp  TestBlock.h
src/Resource_Managers/: Font_Manager.h  Resource_Holder.cpp  Sound_Manager.cpp  Sound_Manager.h  Texture_Manager.cpp  Texture_Manager.h
src/States/: Game_State.cpp  Game_State.h  Playing_State.cpp  Playing_State.h
